# conda-pip-minimal

./: .envrc  .gitignore  .pre-commit-config.yaml  CHANGELOG.org  NOTES.org  README.md  justfile  pyproject.toml
conda-pip-minimal/: meta.yaml
conda.recipe/: meta.yaml
conda_pip_minimal/: __main__.py  cmd.py  deps.py  export.py  min.py  result_capture.py
src/conda_pip_minimal/: __main__.py  cli.py  cmd.py  conda_env.py  deps.py  export.py  logging.py  min.py  result_capture.py  version.py
