[project]
name = "conda-pip-minimal"
description = "Conda+Pip minimal env exports"
authors = [{ name = "Venky Iyer", email = "indigoviolet@gmail.com" }]
license = "MIT"
requires-python = ">=3.7"
dynamic = ["version"]
readme = "README.md"
keywords = ["packaging", "conda", "pip", "environment.yaml"]
classifiers = [
  'Intended Audience :: Developers',
  'Intended Audience :: Science/Research',
  'Topic :: Software Development :: Build Tools'
]
dependencies = [
  "typer>=0.6.1,<0.10.0",
  "semver>=3.0.0,<4.0.0",
  "more-itertools>=8.14.0,<10.0.0",
  "trio>=0.22.0,<0.23.0",
  "loguru>=0.6.0,<0.8.0",
  "importlib-metadata>=5.0.0,<7.0.0",
  "ruamel-yaml>=0.17.21,<0.18.0"
]

[project.urls]
Homepage = "https://github.com/indigoviolet/conda-pip-minimal"

[project.scripts]
conda-cpm = 'conda_pip_minimal.cli:app'

[tool.hatch.version]
path = "conda_pip_minimal/__about__.py"

[tool.hatch.envs.default]
path = ".venv"

[tool.hatch.envs.dev]
extra-dependencies = ["ipython", "snoop", "trio-typing"]

[tool.hatch.build]
packages = ["conda_pip_minimal"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
